[doc] swagger sign up
